# median-data

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  data-pipeline.yml
config/: build.toml  categories.toml  endpoints.toml  riven_attributes.toml
crates/catalog/: Cargo.toml
crates/catalog/src/: assemble.rs  category.rs  compress.rs  config.rs  drop_bridge.rs  joins.rs  main.rs  oracle.rs  quality.rs  schema.rs  validate.rs  wfm_bridge.rs  write.rs
crates/wf-fetch/: Cargo.toml
crates/wf-fetch/src/: de_export.rs  droptables.rs  lib.rs  net.rs  source.rs
