[workspace]
resolver = "2"
members = ["crates/catalog", "crates/wf-fetch"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
rust-version = "1.85.0"

[workspace.dependencies]
# --- shared ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# --- fetch / decode ---
ureq = "3"
lzma-rs = "0.3"
scraper = "0.27"
# --- write / compress ---
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "time",
  "io-util",
] }
zstd = "0.13"
# --- dev ---
ruzstd = "0.8"
# --- internal ---
wf-fetch = { path = "crates/wf-fetch" }

[profile.release]
strip = true
lto = "thin"
