[package]
name = "catalog"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
wf-fetch.workspace = true
ureq.workspace = true
zstd.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
ruzstd.workspace = true
